[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
complex = { path = "../complex" }
serde = { version = "1", features = ["derive"] }
num-complex = "0.4.4"
image = "0.24.7"
serde_json = "1.0.111"
hostname = "0.3.1"
shared = { path = "../shared" }
debug_print = "1.0.0"

# [dev-dependencies]
# tcpstream_mock = ""